<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#120031"
    android:backgroundTint="#120031"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cracinterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AB6CBB"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="What excited you?"
        app:titleTextColor="#FFFFFF" />

    <!-- <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/what_excites_you"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="normal" /> -->

    <CheckBox
        android:id="@+id/checkbox_animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/animals"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/sports"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/traveling"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/books"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/movies"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/dancing"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_cook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/cooking"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/fashion"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/politics"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_volut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/volunteering"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_envir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/environment"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_spirit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/spirituality"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkbox_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/photography"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_internext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/btnround"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="#AC84D9" />

</LinearLayout>