<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#120031"
    android:backgroundTint="#120031"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="What excites you?"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/animals"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_politics" />

    <CheckBox
        android:id="@+id/checkbox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/sports"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkbox_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/traveling"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_volut" />

    <CheckBox
        android:id="@+id/checkbox_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/books"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_photos" />

    <CheckBox
        android:id="@+id/checkbox_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/movies"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_books" />

    <CheckBox
        android:id="@+id/checkbox_dance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/dancing"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_cook" />

    <CheckBox
        android:id="@+id/checkbox_cook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/cooking"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_spirit" />

    <CheckBox
        android:id="@+id/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/fashion"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_movies" />

    <CheckBox
        android:id="@+id/checkbox_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/politics"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_sports" />

    <CheckBox
        android:id="@+id/checkbox_volut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/volunteering"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_envir" />

    <CheckBox
        android:id="@+id/checkbox_envir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/environment"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkbox_spirit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/spirituality"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_travel" />

    <CheckBox
        android:id="@+id/checkbox_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#FFFFFF"
        android:onClick="onCheckboxClicked"
        android:shadowColor="#760B93"
        android:text="@string/photography"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_animals" />

    <Button
        android:id="@+id/btn_intersave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btnround"
        android:text="SAVE"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="#AC84D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fashion" />


</androidx.constraintlayout.widget.ConstraintLayout>