<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120031"
    tools:context=".ChatRoom">

    <Button
        android:id="@+id/btn_send"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:drawableStart="@drawable/ic_baseline_send"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:background="#7CFFFFFF"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/cc"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:background="#66D99FF3"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10sp"
        android:paddingRight="10dp"
        android:text="@string/hey"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chatintro2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/f0a64e32194d341befecc80458707565" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="336dp"
        android:layout_height="75dp"
        android:background="#1AA9A5FF"
        android:paddingLeft="17.5dp"
        android:paddingTop="17.5dp"
        android:paddingRight="17.5dp"
        android:paddingBottom="17.5dp"
        android:text="@string/Irene"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:text="@string/chatintro"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:background="#7CFFFFFF"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="260dp"
        android:layout_height="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:background="#66D99FF3"
        android:paddingLeft="10dp"
        android:paddingTop="9dp"
        android:paddingRight="10dp"
        android:text="@string/chaaat"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="640dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/type"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="#6F000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:drawableStart="@drawable/ic_baseline_library_add"
        android:paddingStart="18dp"
        android:paddingEnd="20dp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>